stretch fix

--- a/flexbox.styl
+++ b/flexbox.styl
@@ -53,10 +53,10 @@ for v in row column
       flex-direction v + -reverse
 
 .row.stretch
-  width 100%
+  min-width 100%
 
 .column.stretch
-  height 100%
+  min-height 100%
 
   &.padded
     height calc(100% - 28px)
